codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__coalesces_reads_across_multiple_calls.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• 已探索
  └ 搜索 shimmer_spans
    读取 shimmer.rs, status_indicator_widget.rs
